--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ header a:hover {
   }
 }
 
-main .carousel__section img {
+main .carousel__container img {
   max-height: 300px;
   object-fit: cover;
 }
