--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -68,7 +68,7 @@ header {
 }
 
 main {
-  .carousel__section {
+  .carousel__container {
     img {
       max-height: 300px;
       object-fit: cover;
