--- a/css/style.css
+++ b/css/style.css
@@ -2,49 +2,39 @@ header {
   background-color: black;
   color: white;
 }
-
 header .desktop__header {
   display: flex;
 }
-
 header .desktop__header .ul__navbar {
   list-style: none;
 }
-
 header .desktop__header .ul__navbar li {
   margin: 0 0.5rem;
   cursor: pointer;
 }
-
 header .desktop__header .ul__navbar li ul {
   display: none;
 }
-
 header .desktop__header .ul__navbar li:hover ul {
   display: block;
   position: absolute;
   z-index: 100;
   background-color: black;
 }
-
 header .mobile__header {
   display: none;
 }
-
 header .mobile__header .offcanvas {
   width: 70%;
   background-color: black;
 }
-
 header a {
   color: white;
   text-decoration: none;
 }
-
 header a:hover {
   color: white;
 }
-
 @media only screen and (max-width: 768px) {
   header .desktop__header {
     display: none;
@@ -63,8 +53,44 @@ header a:hover {
   }
 }
 
+main {
+  background-color: white;
+}
 main .carousel__container img {
   max-height: 300px;
   object-fit: cover;
 }
+
+footer {
+  background-color: black;
+  padding: 40px 0px;
+}
+footer ul {
+  list-style: none;
+  margin-bottom: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+footer ul li {
+  font-size: 130%;
+}
+footer ul li a {
+  color: white;
+  text-decoration: none;
+}
+footer ul li:nth-child(2) {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+body .item-fixed {
+  position: fixed;
+  bottom: 25px;
+  right: -870px;
+}
+body .item-fixed img {
+  width: 10%;
+}
+
 /*# sourceMappingURL=style.css.map */
