logo de whatsapp editado

--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,8 @@ main .carousel__container img {
 }
 
 main .item-fixed {
-  position: fixed;
-  bottom: 5%;
-  right: 5%;
+  position: sticky;
+  bottom: 3%;
 }
 
 main .item-fixed img {
