--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,29 @@ main .productos__container .ul__categorias li {
   cursor: pointer;
 }
 
+main .info {
+  margin-top: 7rem;
+}
+
+main .info ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 0rem;
+}
+
+main .info ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+main .info ul li p {
+  text-align: center;
+  font-size: 20px;
+}
+
 main .item-fixed {
   position: fixed;
   bottom: 3%;
@@ -93,29 +116,13 @@ main .item-fixed img {
   width: 4rem;
 }
 
-main .info ul {
-  list-style: none;
-  margin-bottom: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding-left: 0rem;
-  margin-top: 10px;
-  margin-bottom: 20px;
-}
-
-main .info ul li {
-  font-size: 400%;
-  text-align: center;
-}
-
-main .info ul li p {
-  font-size: 25px;
-}
-
-main .info ul li:nth-child(2) {
-  margin-right: 10px;
-  margin-left: 10px;
+@media only screen and (max-width: 768px) {
+  main .info ul {
+    flex-direction: column;
+  }
+  main .info ul li {
+    margin: 0.5rem 0;
+  }
 }
 
 footer {
