--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -89,6 +89,34 @@ main {
     }
   }
 
+  .info {
+    margin-top: 7rem;
+
+    ul {
+      list-style: none;
+      display: flex;
+      justify-content: space-between;
+      padding: 0rem;
+
+      li {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+
+        p {
+          text-align: center;
+          font-size: 20px;
+        }
+      }
+
+      // li:nth-child(2) {
+      //   margin-right: 10px;
+      //   margin-left: 10px;
+      // }
+    }
+  }
+
   .item-fixed {
     position: fixed;
     bottom: 3%;
@@ -100,29 +128,12 @@ main {
     }
   }
 
-  .info {
-    ul {
-      list-style: none;
-      margin-bottom: 0;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-evenly;
-      padding-left: 0rem;
-      margin-top: 10px;
-      margin-bottom: 20px;
+  @media only screen and (max-width: 768px) {
+    .info ul {
+      flex-direction: column;
 
       li {
-        font-size: 400%;
-        text-align: center;
-
-        p {
-          font-size: 25px;
-        }
-      }
-
-      li:nth-child(2) {
-        margin-right: 10px;
-        margin-left: 10px;
+        margin: 0.5rem 0;
       }
     }
   }
