--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ main .productos__container .ul__categorias li {
 
 main .productos__container .productos .hover__zoom:hover {
   transform: scale(2);
+  transition: 0.5s;
 }
 
 main .info {
