--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -16,11 +16,28 @@ header {
           display: none;
         }
 
-        &:hover ul {
-          display: block;
-          position: absolute;
-          z-index: 100;
-          background-color: black;
+        &:hover {
+          ul {
+            display: block;
+            position: absolute;
+            z-index: 100;
+            list-style: none;
+            padding: 1rem 0 0 0;
+            background-color: black;
+
+            li {
+              width: min-content;
+              margin: 0.5rem;
+              background-image: linear-gradient(currentColor, currentColor);
+              background-position: 0% 100%;
+              background-repeat: no-repeat;
+              background-size: 0% 1px;
+              transition: background-size 0.5s;
+              &:hover {
+                background-size: 100% 1px;
+              }
+            }
+          }
         }
       }
     }
@@ -90,8 +107,9 @@ main {
 
     .productos {
       .hover__zoom:hover {
-        transform: scale(2);
+        transform: scale(1.5);
         transition: 0.5s;
+        cursor: zoom-out;
       }
     }
   }
