--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
 header {
   background-color: black;
   color: white;
+  position: sticky;
+  top: 0;
+  z-index: 101;
 }
 
 header .desktop__header {
@@ -22,7 +25,7 @@ header .desktop__header .ul__navbar li ul {
 }
 
 header .desktop__header .ul__navbar li:hover ul {
-  display: block;
+  display: flex;
   position: absolute;
   z-index: 100;
   list-style: none;
@@ -77,6 +80,16 @@ header a:hover {
   }
   header .mobile__header .ul__navbar--mobile .ul__hide {
     list-style: none;
+  }
+  header .mobile__header .ul__navbar--mobile .ul__hide li {
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 1px;
+    transition: background-size 0.5s;
+  }
+  header .mobile__header .ul__navbar--mobile .ul__hide li:hover {
+    background-size: 100% 1px;
   }
 }
 
