--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,6 +1,9 @@
 header {
   background-color: black;
   color: white;
+  position: sticky;
+  top: 0;
+  z-index: 101;
 
   .desktop__header {
     display: flex;
@@ -18,7 +21,7 @@ header {
 
         &:hover {
           ul {
-            display: block;
+            display: flex;
             position: absolute;
             z-index: 100;
             list-style: none;
@@ -78,6 +81,17 @@ header {
 
         .ul__hide {
           list-style: none;
+
+          li {
+            background-image: linear-gradient(currentColor, currentColor);
+            background-position: 0% 100%;
+            background-repeat: no-repeat;
+            background-size: 0% 1px;
+            transition: background-size 0.5s;
+            &:hover {
+              background-size: 100% 1px;
+            }
+          }
         }
       }
     }
