--- a/css/style.css
+++ b/css/style.css
@@ -166,29 +166,42 @@ main .item-fixed img {
 
 footer {
   background-color: black;
-  padding: 40px 0px;
 }
 
 footer ul {
   list-style: none;
-  margin-bottom: 0;
+  margin: 0;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding-left: 0rem;
+  justify-content: space-between;
+  padding: 0.5rem 0;
 }
 
 footer ul li {
-  font-size: 130%;
+  font-size: 20px;
 }
 
 footer ul li a {
   color: white;
   text-decoration: none;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 1px;
+  transition: background-size 0.5s;
 }
 
-footer ul li:nth-child(2) {
-  margin-right: 10px;
-  margin-left: 10px;
+footer ul li a:hover {
+  background-size: 100% 1px;
+  color: white;
+}
+
+@media only screen and (max-width: 768px) {
+  footer ul {
+    flex-direction: column;
+    align-items: center;
+  }
+  footer ul li {
+    margin: 0.5rem 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
