--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -148,11 +148,6 @@ main {
           font-size: 20px;
         }
       }
-
-      // li:nth-child(2) {
-      //   margin-right: 10px;
-      //   margin-left: 10px;
-      // }
     }
   }
 
@@ -187,28 +182,41 @@ main {
 
 footer {
   background-color: black;
-  padding: 40px 0px;
 
   ul {
     list-style: none;
-    margin-bottom: 0;
+    margin: 0;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding-left: 0rem;
+    justify-content: space-between;
+    padding: 0.5rem 0;
 
     li {
-      font-size: 130%;
+      font-size: 20px;
 
       a {
         color: white;
         text-decoration: none;
+        background-image: linear-gradient(currentColor, currentColor);
+        background-position: 0% 100%;
+        background-repeat: no-repeat;
+        background-size: 0% 1px;
+        transition: background-size 0.5s;
+        &:hover {
+          background-size: 100% 1px;
+          color: white;
+        }
       }
     }
+  }
 
-    li:nth-child(2) {
-      margin-right: 10px;
-      margin-left: 10px;
+  @media only screen and (max-width: 768px) {
+    ul {
+      flex-direction: column;
+      align-items: center;
+
+      li {
+        margin: 0.5rem 0;
+      }
     }
   }
 }
