--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -43,6 +43,11 @@ header {
           }
         }
       }
+
+      .li__indumentaria:hover .chevron__up {
+        transform: rotate(180deg);
+        transition: 0.2s;
+      }
     }
   }
 
@@ -79,18 +84,25 @@ header {
           margin: 0.5rem 0;
         }
 
-        .ul__hide {
-          list-style: none;
+        .li__indumentaria {
+          .ul__hide {
+            list-style: none;
 
-          li {
-            background-image: linear-gradient(currentColor, currentColor);
-            background-position: 0% 100%;
-            background-repeat: no-repeat;
-            background-size: 0% 1px;
-            transition: background-size 0.5s;
-            &:hover {
-              background-size: 100% 1px;
+            li {
+              background-image: linear-gradient(currentColor, currentColor);
+              background-position: 0% 100%;
+              background-repeat: no-repeat;
+              background-size: 0% 1px;
+              transition: background-size 0.5s;
+              &:hover {
+                background-size: 100% 1px;
+              }
             }
+          }
+
+          &:hover .chevron__up {
+            transform: rotate(180deg);
+            transition: 0.2s;
           }
         }
       }
