--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap");
 header {
   background-color: black;
   color: white;
@@ -211,6 +212,47 @@ footer ul li a:hover {
   }
   footer ul li {
     margin: 0.5rem 0;
+  }
+}
+
+.main__404 {
+  color: black;
+  font-family: "Montserrat", sans-serif;
+}
+
+.main__404 h1 {
+  font-size: 96px;
+  font-weight: 900;
+  text-align: center;
+}
+
+.main__404 h4 {
+  font-size: 36px;
+  font-weight: 500;
+}
+
+.main__404 h5 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+
+.main__404 p {
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 600px) {
+  .main__404 h1 {
+    font-size: 64px;
+  }
+  .main__404 h4 {
+    font-size: 24px;
+  }
+  .main__404 h5 {
+    font-size: 18px;
+  }
+  .main__404 .section__img-404 {
+    display: none;
   }
 }
 /*# sourceMappingURL=style.css.map */
