--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
-@import "./base";
-
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap");
+
+@import "./base";
+@import "./404";
