--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -137,6 +137,11 @@ main {
         transition: 0.5s;
         cursor: zoom-out;
       }
+
+      .precio__producto {
+        font-size: 1.5rem;
+        font-weight: 600;
+      }
     }
   }
 
