--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -142,6 +142,12 @@ main {
         font-size: 1.5rem;
         font-weight: 600;
       }
+
+      .precio__producto--cuotas {
+        font-size: 0.9rem;
+        font-weight: 500;
+        color: grey;
+      }
     }
   }
 
