--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap");
 header {
   background-color: black;
   color: white;
+  font-family: "Roboto", sans-serif;
   position: sticky;
   top: 0;
   z-index: 101;
@@ -105,6 +107,8 @@ header a:hover {
 
 main {
   background-color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
 }
 
 main .carousel__container img {
