--- a/css/style.css
+++ b/css/style.css
@@ -127,20 +127,40 @@ main .productos__container .ul__categorias li {
 }
 
 main .productos__container .productos .hover__zoom:hover {
-  transform: scale(1.5);
+  transform: scale(1.3);
   transition: 0.5s;
   cursor: zoom-out;
 }
 
-main .productos__container .productos .precio__producto {
-  font-size: 1.5rem;
+main .productos__container .productos article .card:hover {
+  box-shadow: 0 0 10px #c7c7c7;
+}
+
+main .productos__container .productos article .card .card-title {
+  font-weight: 500;
+}
+
+main .productos__container .productos article .card .card-text {
+  font-weight: 500;
+  font-size: 18px;
+}
+
+main .productos__container .productos article .card .precio__producto--cuotas {
+  font-weight: 500;
+  color: grey;
+}
+
+main .productos__container .productos article .card .modal .precio__producto {
+  font-size: 30px;
   font-weight: 600;
 }
 
-main .productos__container .productos .precio__producto--cuotas {
+main .productos__container .productos article .card .modal .formas-pago__container {
   font-size: 0.9rem;
+}
+
+main .productos__container .productos article .card .modal .titles__descripcion {
   font-weight: 500;
-  color: grey;
 }
 
 main .info {
