--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -124,13 +124,33 @@ main {
   }
 
   .productos__container {
+    .title__productos {
+      font-size: 1.2rem;
+      font-weight: 600;
+    }
+
     .ul__categorias {
+      justify-content: center;
       list-style: none;
-      display: flex;
+      // overflow-y: hidden;
+      overflow-x: scroll;
+      &::-webkit-scrollbar {
+        display: none;
+      }
 
       li {
-        margin: 0 1rem;
+        font-size: 14px;
+        padding: 0.5rem 0;
         cursor: pointer;
+        &:hover {
+          font-weight: 600;
+        }
+        &:nth-child(-n + 9) {
+          &::after {
+            content: "|";
+            margin: 0 0.5rem;
+          }
+        }
       }
     }
 
@@ -216,6 +236,13 @@ main {
 
   @media only screen and (max-width: 768px) {
     .productos__container {
+      .ul__categorias {
+        justify-content: flex-start;
+        &::-webkit-scrollbar {
+          display: inline;
+        }
+      }
+
       .productos {
         .hover__zoom {
           pointer-events: none;
