--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -15,6 +15,14 @@ header {
       li {
         margin: 0 0.5rem;
         cursor: pointer;
+        background-image: linear-gradient(currentColor, currentColor);
+        background-position: 50% 100%;
+        background-repeat: no-repeat;
+        background-size: 0% 1px;
+        transition: background-size 0.5s;
+        &:hover {
+          background-size: 100% 1px;
+        }
 
         ul {
           display: none;
@@ -261,6 +269,9 @@ main {
 
 footer {
   background-color: black;
+  height: 100px;
+  display: flex;
+  align-items: center;
 
   ul {
     list-style: none;
@@ -276,7 +287,7 @@ footer {
         color: white;
         text-decoration: none;
         background-image: linear-gradient(currentColor, currentColor);
-        background-position: 0% 100%;
+        background-position: 50% 100%;
         background-repeat: no-repeat;
         background-size: 0% 1px;
         transition: background-size 0.5s;
@@ -289,6 +300,8 @@ footer {
   }
 
   @media only screen and (max-width: 768px) {
+    height: fit-content;
+
     ul {
       flex-direction: column;
       align-items: center;
