--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,4 +3,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap");
 
 @import "./base";
+@import "./preguntas-frecuentes";
+@import "./contacto";
 @import "./404";
