--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -4,15 +4,14 @@
   flex-direction: column;
 
   .titulos-contacto {
-    flex-wrap: wrap;
     margin-bottom: 30px;
 
     h1 {
-      font-size: 170%;
+      font-size: 30px;
     }
 
     h2 {
-      font-size: 140%;
+      font-size: 20px;
       color: grey;
     }
   }
@@ -34,6 +33,18 @@
         list-style: none;
         flex-direction: column;
         align-items: center;
+      }
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    .titulos-contacto {
+      h1 {
+        font-size: 20px;
+      }
+
+      h2 {
+        font-size: 15px;
       }
     }
   }
