--- a/scss/_preguntas-frecuentes.scss
+++ b/scss/_preguntas-frecuentes.scss
@@ -1,8 +1,4 @@
 .preguntas-frecuentes {
-  // display: flex;
-  // align-items: flex-start;
-  // flex-direction: column;
-
   h1 {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
@@ -33,12 +29,13 @@
           h2 {
             margin-top: 5px;
             font-weight: bold;
-            font-size: 140%;
+            font-size: 30px;
+            color: rgb(65, 65, 65);
           }
 
           h3 {
-            font-size: 110%;
-            color: gray;
+            font-size: 20px;
+            color: grey;
           }
 
           .img-preguntas {
@@ -57,7 +54,7 @@
 
   @media only screen and (max-width: 768px) {
     h1 {
-      font-size: 15px;
+      font-size: 20px;
     }
 
     .preguntas .primera ul li {
@@ -77,6 +74,30 @@
       .img-preguntas-mobile {
         display: block;
         width: 100%;
+      }
+    }
+
+    .preguntas {
+      align-items: center;
+      text-decoration: none;
+
+      .primera,
+      .segunda,
+      .tercera,
+      .cuarta,
+      .quinta,
+      .sexta {
+        ul {
+          li {
+            h2 {
+              font-size: 20px;
+            }
+
+            h3 {
+              font-size: 15px;
+            }
+          }
+        }
       }
     }
   }
