--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -78,6 +78,10 @@ header {
     }
   }
 
+  .activeLink {
+    font-weight: 900;
+  }
+
   @media only screen and (max-width: 768px) {
     .desktop__header {
       display: none;
