--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -272,6 +272,19 @@ main {
       }
 
       .productos {
+        article .card {
+          .h5__producto {
+            font-size: 1.1rem;
+          }
+
+          .p-precio__producto {
+            font-size: 1rem;
+          }
+
+          .precio__producto--cuotas {
+            font-size: 0.9rem;
+          }
+        }
         .hover__zoom {
           pointer-events: none;
         }
